# ldcp_sdk

./: CMakeLists.txt
include/ldcp/: bootloader.h  common.h  data_types.h  device.h  device_base.h  device_info.h  device_manager.h  device_notifier.h  error.h  location.h  session.h  transport.h
src/: bootloader.cpp  device.cpp  device_base.cpp  session.cpp  transport.cpp
